--- a/package.json
+++ b/package.json
@@ -25,32 +25,27 @@
     "gulp-base64": "^0.1.3",
     "gulp-clean": "0.3.1",
     "gulp-clean-css": "latest",
-    "gulp-connect": "latest",
-    "gulp-copy": "latest",
+    "gulp-connect": "^5.6.1",
     "gulp-file-include": "0.13.7",
     "gulp-flatten": "^0.2.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^3.3.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-inline-source": "latest",
-    "gulp-md5-save": "^1.0.1",
     "gulp-open": "latest",
     "gulp-replace-path": "latest",
     "gulp-rev": "latest",
-    "gulp-rev-orig": "latest",
     "gulp-rev-replace": "latest",
     "gulp-sass": "latest",
     "gulp-sequence": "^0.4.5",
     "gulp-uglify": "latest",
     "gulp-useref": "latest",
-    "gulp-util": "^3.0.7",
     "gulp-velocity": "latest",
     "gulp-watch": "latest",
     "gulp-zip": "^3.2.0",
     "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^4.2.2",
+    "imagemin-pngquant": "^6.0.0",
     "mockjs": "^1.0.0",
     "request": "^2.72.0",
-    "require-dir": "^0.3.0",
     "require-no-cache": "^0.2.1",
     "through2": "^2.0.1"
   }
