--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run dev && node ./bin/www",
+    "start": "npm run dev",
     "dev": "gulp dev",
-    "release": "gulp release"
+    "release": "gulp release",
+    "express": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -18,7 +19,6 @@
   },
   "devDependencies": {
     "async": "^1.5.2",
-    "buffers": "^0.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "latest",
     "gulp-base64": "^0.1.3",
@@ -26,25 +26,20 @@
     "gulp-clean-css": "latest",
     "gulp-connect": "^5.6.1",
     "gulp-file-include": "0.13.7",
-    "gulp-flatten": "^0.2.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-inline-source": "latest",
     "gulp-open": "latest",
     "gulp-replace-path": "latest",
-    "gulp-rev": "latest",
-    "gulp-rev-replace": "latest",
     "gulp-sass": "latest",
     "gulp-sequence": "^0.4.5",
     "gulp-uglify": "^3.0.1",
     "gulp-useref": "latest",
     "gulp-watch": "latest",
-    "gulp-zip": "^3.2.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^6.0.0",
     "mockjs": "^1.0.0",
     "request": "^2.72.0",
-    "require-no-cache": "^0.2.1",
-    "through2": "^2.0.1"
+    "require-no-cache": "^0.2.1"
   }
 }
