fix bug in android

--- a/package.json
+++ b/package.json
@@ -5,17 +5,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "gulp dev",
-    "release": "gulp release",
-    "express": "node ./bin/www"
+    "release": "gulp release"
   },
-  "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "async": "^1.5.2",
     "gulp": "^3.9.1",
